Tive que refazer o código de spawn dos inimigos
Ele não estava funcionando

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,5 +66,5 @@
     "explorer.fileNesting.patterns": {
         "*.sln": "*.csproj"
     },
-    "dotnet.defaultSolution": "Space-Invaders.sln"
+    "dotnet.defaultSolution": "Space Invaders.sln"
 }
